# poc-did-webplus-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.cursor/plans/: did-webplus_full_resolver_python_7bad1c7d.plan.md  interop_did_controller_scenarios_9cfb1f1f.plan.md  pre-test-vector_work_plan_bc3073c2.plan.md  test_vector_evaluation_and_implementation_613bdb2d.plan.md  vdr_service_implementation_e3e3f2a2.plan.md
did_webplus/: __init__.py  cli.py  controller.py  did.py  document.py  http_client.py  logging_config.py  resolver.py  selfhash.py  store.py  vdr.py  verification.py
docs/: TEST_VECTOR_REQUESTS.md
interop/: Dockerfile.python-vdr  README.md  docker-compose.yml  run_all_interop_tests.sh  run_interop_tests.py  run_interop_tests.sh  stop_and_clean.sh
scripts/: fetch_ledgerdomain_fixtures.py
test-vectors/: README.md
test-vectors/did-to-url-mapping/: README.md  mapping.json
test-vectors/negative/: invalid-chain.json  invalid-proofs.json  invalid-self-hash.json  invalid-valid-from.json  invalid-vdr-domain-mismatch.json  invalid-version-id.json  malformed-update-rules.json  unsatisfied-update-rules.json
test-vectors/update-rules-variants/: all.json  any.json  at-least.json  hashed-key.json  key-base58btc.json  key.json
test-vectors/valid/: non-root-document.jcs  non-root-document.json  root-document.jcs  root-document.json
tests/: conftest.py  test_cli.py  test_controller.py  test_did.py  test_document.py  test_fixtures.py  test_http_client.py  test_resolver_integration.py  test_selfhash.py  test_store.py  test_vdr.py  test_verification.py
(+12 files in other folders)
